fix: keyboard and board no longer overlap

--- a/src/style.css
+++ b/src/style.css
@@ -18,8 +18,6 @@ body {
   height: 4em;
 
   border-bottom: 1px solid #333;
-  /* padding: 5px 0; */
-  margin-bottom: 25pt;
 }
 
 .header h1 {
@@ -226,6 +224,7 @@ body {
   display: flex;
   justify-content: center;
   margin: 0 auto 5px;
+  height: 100%;
 }
 
 .kb-btn {
@@ -236,7 +235,7 @@ body {
   align-items: center;
 
   width: 40px;
-  height: 60px;
+  height: auto;
 
   text-align: center;
   text-transform: uppercase;
@@ -259,7 +258,6 @@ body {
 @media (max-width: 502px) {
   .kb-btn {
     width: 32px;
-    height: 15vmin;
   }
   .enter-btn,
   .bs-btn {
@@ -271,10 +269,15 @@ body {
 }
 
 .keyboard {
-  width: fit-content;
+  display: flex;
+  flex-direction: column;
+  height: 30%;
+  margin-bottom: 20px;
+}
 
-  position: absolute;
-  left: 50%;
-  transform: translateX(-50%);
-  bottom: 20px;
+.app-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100vh;
 }
